# wgorganizer

./: DateTimeProvider.py  UI_Cleaning.py  UI_MainWindow.py  UI_Settings.py  main.py  setup.py  wgorganizer.ui
core/: Cleaning.py  Initializer.py  SaveData.py  WGInfo.py  setup.cfg  setup.py
data/: wginfo.json  wginfo.xml
src/: main.py
src/core/: Cleaning.py  Dashboard.py  SaveData.py  Settings.py  TabBase.py  WGInfo.py
src/data/: wginfo.json
src/ui/: UIManager.py  UI_Cleaning.py  UI_Dashboard.py  UI_MainWindow.py  UI_Members.py  UI_Settings.py
ui/: UIManager.py  UI_Cleaning.py  UI_MainWindow.py  UI_Settings.py
util/: DateTimeProvider.py  ThreadManager.py
