[metadata]
name = WG-Organizer
version = 0.0.1
author = Zack Walker
author_email = zackdavidwalker94@gmail.com
description = WG Organizer for WG TIM
long_description = file: README.md
long_description_content_type = text/markdown
url = github.com/ZackDavidWalker/wgorganizer
classifiers =
     Programming Language :: Python :: 3
     License :: OSI Approved :: Apache Software License
     Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.7
include_package_data = True